[package]
name = "zjk8s"
version = "0.1.0"
authors = ["Daniel Jankowski"]
edition = "2018"

[[bin]]
name = "zjk8s"

[dependencies]
ansi_term = "0.12.1"
zellij-tile = "0.39.0"
chrono = "0.4.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
miette = { version = "7.1.0", features = ["fancy"] }
thiserror = "1.0.57"
console = "0.15.8"
anstyle = "1.0.6"
itertools = "0.12.1"
