[package]
name = "zjk8s"
version = "0.1.0"
authors = ["Daniel Jankowski"]
edition = "2018"

[[bin]]
name = "zjk8s"

[dependencies]
ansi_term = "0.12.1"
zellij-tile = "0.41.1"
chrono = "0.4.38"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "2.0.3"
console = "0.15.8"
anstyle = "1.0.10"
itertools = "0.13.0"
anyhow = "1.0.93"
