[package]
name = "zjk8s"
version = "0.2.0"
authors = ["Daniel Jankowski"]
edition = "2018"

[[bin]]
name = "zjk8s"

[dependencies]
ansi_term = "0.12.1"
zellij-tile = "0.42.2"
chrono = "0.4.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
miette = { version = "7.5.0", features = ["fancy"] }
thiserror = "2.0.12"
console = "0.15.11"
anstyle = "1.0.10"
itertools = "0.14.0"
anyhow = "1.0.98"
